Fixed Issue On Smaller Screens

--- a/css/style.css
+++ b/css/style.css
@@ -17,8 +17,8 @@ body {
 }
 
 .container {
-    margin-left: 15px;
-    margin-right: 15px;
+    margin-left: 10px;
+    margin-right: 10px;
     width: 340px;
 }
 
